--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,138 @@
   Base Element Styles
 ==================================== */
 
+* {
+    box-sizing: border-box;
+}
+
+html,
 body {
-    position: relative;
+  width: 100%;
+  max-width: 100%;
+  background-color:rgba(235, 235, 235, 0.9);;
+}
+
+body {
+    position: absolute;
     font-family: 'Comfortaa', cursive;
 }
+
+/* ================================= 
+  Body
+==================================== */
+
+
+.grid-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+
+#search {
+    display: block;
+    margin: 25px auto 5px;
+    padding: 10px;
+    height: 40px;
+    width: 30%;
+    border: 1px solid #777;
+    border-radius: 0.25em;
+    background: rgba(245, 245, 245, 0.9);
+    box-shadow: 3px 2px 3px 0px rgba(0,0,0,0.75);
+    margin-bottom: 40px;
+  }
+  
+#search::placeholder {
+font-size: 14px;
+}
+
+.card {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    cursor: pointer;
+    width: 100%;
+    max-width: 380px;
+    margin: 10px 10px 20px;
+    padding: 10px;
+    background: rgba(245, 245, 245, 0.9);
+    border-radius: 0.25em;
+    transition: .4s ease-out;
+    overflow: hidden;
+    box-shadow:0 2px 3px 0px rgba(0,0,0,0.25);
+    cursor: pointer;
+    transition:.3s all;
+}
+ 
+.grid-container:hover .card{
+    filter:blur(3px);
+    opacity:.5;
+    transform: scale(.98);
+    box-shadow:none;
+}
+
+.grid-container:hover .card:hover{
+    transform:scale(1);
+    filter:blur(0px);
+    opacity:1;
+    box-shadow:0 8px 20px 0px rgba(0,0,0,0.125);
+}
+
+header h1 {
+    font-size: 2.5rem;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+}
+
+.avatar {
+    width: 95px;
+    margin: 0px 8px auto 10px;
+    border-radius: 50%;
+}
+  
+.text-container {
+    text-align: left;
+    margin-top: 5px;
+    font-size: 0.9em;
+    color: rgba(50, 50, 50, 0.7);
+}
+  
+.card-name {
+    margin: 20px auto 0;
+}
+  
+
+.email,
+.address,
+.number,
+.address,
+.birthday {
+    color: rgb(121, 116, 116);
+}
+
+.email,
+.name,
+.address {
+    margin: 10px;
+}
+
+.email,
+.address {
+    font-size: 13px;
+}
+
+.name {
+    color: black;
+}
+
 
 /* ================================= 
   Modal & Overlay
@@ -22,15 +150,29 @@ body {
 }
 
 .modal {
-    width: 375px;
+    width: 400px;
     margin: 15% auto auto;
     position: relative;
     text-align: center;
     background: #fff;
-    border: 1px solid #778;
     border-radius: 5px;
     padding: 30px 20px;
+    background: rgba(245, 245, 245,);
+    box-shadow:0 2px 3px 0px rgba(0,0,0,0.25);
 }
+
+.modal-content .text-container{
+    text-align: center;
+}
+
+.modal-content .avatar {
+    width: 160px;
+}
+
+hr {
+    margin: 20px;
+}
+
 
 .modal-close {
     position: absolute;
@@ -43,92 +185,14 @@ body {
     display: none;
 }
 
-/* ================================= 
-  Body
-==================================== */
 
-header h1 {
-    margin-top: 50px;
-    margin-bottom: 40px;
-    margin-left: 40px;
-}
-
-.avatar {
-    border-radius: 50%;
-}
-
-.name {
-    font-size: 25px;
-    margin-left: 10px;
-    margin-top: 25px;
-}
-
-
-.email,
-.address,
-.number,
-.address,
-.birthday {
-    color: rgb(121, 116, 116);
-}
-
-.email,
-.address {
-    margin: 10px;
-}
-
-.grid-container{
-    display: flex; 
-    justify-content: space-between;
-    margin-bottom: 40px;
-    margin-left: 40px;
-}
-
-.avatar {
-    float: left;
-    padding-top: 8px;
-
-}
-
-.text-container {
-    padding-left: 150px;
-}
-
-.card {
-    background-color: #fbfbfb;
-    border-radius: 5px;
-    border: 1px solid #ddd;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 2em;
-    width: 420px;
-    height: 140px;
-    box-shadow:0 2px 3px 0px rgba(0,0,0,0.25);
-    cursor: pointer;
-    transition:.3s all;
-}
-
-     
-.grid-container:hover .card{
-    filter:blur(3px);
-    opacity:.5;
-    transform: scale(.98);
-    box-shadow:none;
-}
-
-.grid-container:hover .card:hover{
-    transform:scale(1);
-    filter:blur(0px);
-    opacity:1;
-    box-shadow:0 8px 20px 0px rgba(0,0,0,0.125);
-}
 
 /* ================================= 
   Grid Container
 ==================================== */
 
 
-.grid-container {
+/* .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -138,7 +202,7 @@ header h1 {
       ". . ."
       ". . ."
       ". . .";
-}
+} */
 
 
 /* ================================= 
