--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ header h1 {
 ==================================== */
 
 .overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -160,6 +160,7 @@ header h1 {
     background: rgba(245, 245, 245,);
     box-shadow:0 2px 3px 0px rgba(0,0,0,0.25);
 }
+
 
 .modal-content .text-container{
     text-align: center;
